# gnome-control-center

./: configure.ac  configure.in
capplets/keyboard/: gnome-keyboard-properties-xkb.c
panels/: Makefile.am
panels/background/: Makefile.am  bg-pictures-source.c
panels/datetime/: Makefile.am  test-endianess.c  test-timezone.c  tz.h
panels/keyboard/: cc-keyboard-option.c
panels/network/connection-editor/: ce-page-ip4.c  ce-page-ip4.h  ce-page-ip6.c  ce-page-ip6.h  ip4-page.ui  ip6-page.ui
panels/power/: cc-power-panel.c
panels/printers/: Makefile.am  cc-printers-panel.c  pp-host.c  pp-samba.c
panels/search/: cc-search-panel.c  search.ui
panels/user-accounts/: um-password-dialog.c  um-realm-manager.c
po/: es.po  gu.po  ug.po
shell/: Makefile.am  cc-panel-loader.c  cc-window.c
